# binominal-result-graph

./: README.md  binominal-calculator.ipynb  pyproject.toml
